--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -102,7 +102,7 @@
   }
   
   .btn-primary {
-    @apply bg-primary text-white hover:bg-primary-dark dark:hover:bg-primary-light focus:ring-primary;
+    @apply bg-primary text-white hover:bg-primary-dark dark:hover:bg-primary/90 focus:ring-primary;
   }
   
   .btn-outline {
